# arkts-code-reviewer

./: .gitignore  compose.retrieval.yaml  pyproject.toml
E2E_test_example_1/: README.md  REPORT.md  __init__.py  prepare_fixture.py  run_e2e.py  video_player_tag_pilot.py
E2E_test_example_1/artifacts/: 00_run_manifest.json  04_review_unit_build.json  08_retrieval_request.json  09_knowledge_index_summary.json  10_evidence_pack.json  11_assertions.json  12_summary.json
E2E_test_example_1/inputs/: diff.patch  head.ets
E2E_test_example_2_ai_tag_pilot/: .gitattributes  README.md  REPORT.md  __init__.py  prepare_observations.py  run_e2e.py
E2E_test_example_2_ai_tag_pilot/artifacts/: 00_run_manifest.json  01_change_set.json  02_parser_base.json  03_parser_head.json  05_unit_fact_scopes.json  06_static_feature_routing.json  07_context_plan.json  08_campaign_inspection.json  09_deepseek_results.json  10_grok_results.json  11_static_deepseek_comparison.json  13_assertions.json  14_summary.json
E2E_test_example_2_ai_tag_pilot/inputs/: expected_review_units.json  grok_observations.json  live_provenance.json  mutation_spec.json  provenance.json
E2E_test_example_3_document_card/: README.md  REPORT.md  __init__.py  run_e2e.py
E2E_test_example_4_document_card_campaign/: README.md  REPORT.md
config/: ai_tag_contracts.yaml  dimensions.yaml  knowledge_annotations.yaml  knowledge_document_card_export.yaml  knowledge_document_card_pilot_export_v1.yaml  knowledge_document_card_pilot_selection_v1.yaml  knowledge_model_export.yaml  knowledge_seed_v1.yaml  retrieval.yaml  retrieval_shadow_v3.yaml  tags.yaml
docs/: README.md  architecture.md
docs/architecture/: configuration.md  data-contracts.md  overview.md  workspace-and-sources.md
docs/audits/: 2026-07-14-quality-gaps-and-remediation.md
docs/code-analysis/: Mentor对齐问题清单-ReviewUnit与评审边界.md  ReviewUnit模块完整设计.md  代码分析模块架构与数据流.md  架构推进策略与Mentor对齐要点.md
docs/examples/: photowall-end-to-end.md
docs/learning/: arkts-parser-fields-tags.md
docs/modules/: 01-input-orchestration.md  02-parser.md  03-review-unit.md  04-feature-routing.md  05-knowledge-base.md  06-retrieval.md  07-rules.md  08-prompt-review.md  09-output-integration.md  10-evaluation-feedback.md  11-parser-validation.md  code-analysis.md  parser-validation.md  retrieval.md
docs/proposals/: hybrid-code-analysis-and-unified-retrieval.md  two-level-knowledge-document-projection.md
docs/reference/: feature-routing-dimensions-v1.md  feature-routing-tags-v1.md  tags-and-dimensions-routing.md
migrations/document_projection/: 0001_initial.sql
migrations/retrieval/: 0001_initial.sql  0002_evaluation_fixture.sql
prompts/hybrid-analysis/: deepseek-tag-analysis-v1.md
prompts/knowledge/: deepseek-document-card-v1.md  grok-knowledge-auditor-v1.md  grok-knowledge-auditor-v2.md  grok-knowledge-auditor-v3.md  grok-knowledge-auditor-v4.md
schemas/knowledge/: grok-review-output.schema.json  (+1 more)
tests/: test_applications_app_samples.py  test_arkui_engine_samples.py  test_campaign_state_persistence_security.py  test_change_review.py  test_change_set.py  test_change_set_analyzer.py  test_change_set_golden.py  test_code_analysis_parser.py  test_context_plan_golden.py  test_context_planning.py  test_deepseek_campaign_live_smoke.py  test_deepseek_live_smoke.py  test_deepseek_outer_diagnostics.py  test_deepseek_shadow_observation_v2.py  test_deepseek_shadow_provider.py  test_e2e_example_1.py  test_feature_config.py  test_feature_routing_engine.py  test_feature_routing_golden.py  test_feature_routing_policy.py  test_feature_routing_schema_versioning.py  test_file_analysis_golden.py  test_file_analysis_models.py  test_file_analysis_parser.py  test_file_analysis_sidecar.py  test_hybrid_analysis_builders.py  test_hybrid_analysis_dispatch.py  test_hybrid_analysis_models.py  test_hybrid_analysis_requests.py  test_hybrid_formal_execution.py  test_hybrid_formal_execution_matrix.py  test_hybrid_shadow_campaign.py  test_hybrid_shadow_campaign_execution.py  test_hybrid_shadow_campaign_limits_regressions.py  test_hybrid_shadow_campaign_runner.py  test_hybrid_shadow_evaluation.py  test_hybrid_shadow_runtime_security_regressions.py  test_knowledge_adapters.py  test_knowledge_annotation_config.py  test_knowledge_annotations.py  (+69 more)
tools/: annotate_knowledge_candidates.py  audit_parser_candidate_evidence.py  build_evaluation_knowledge.py  build_knowledge_candidates.py  build_knowledge_review_consensus.py  build_knowledge_review_packets.py  build_knowledge_seed.py  build_lifecycle_blind_consensus.py  build_lifecycle_blind_review_packet.py  build_retrieval_golden_index.py  build_sample_guidance.py  build_tag_truth_v2_consensus.py  build_tag_truth_v2_publication.py  build_tag_truth_v2_review_packet.py  check_feature_routing_package.py  check_hybrid_analysis_package.py  check_knowledge_sources.py  check_parser_v1.py  check_tag_retrieval_fixture.py  check_tag_truth_v2_constructibility.py  evaluate_change_set_golden.py  evaluate_context_plan_golden.py  evaluate_feature_routing_golden.py  evaluate_file_analysis_golden.py  evaluate_knowledge_golden.py  evaluate_lifecycle_owner_role_holdout.py  evaluate_lifecycle_symbol_leaf_candidate.py  evaluate_parser_candidates.py  evaluate_parser_golden.py  evaluate_retrieval_embedding.py  evaluate_retrieval_golden.py  evaluate_review_unit_golden.py  evaluate_review_unit_v2_golden.py  evaluate_tag_truth.py  export_knowledge_schemas.py  inspect_ai_tag_shadow_campaign.py  inspect_video_player_tag_pilot.py  lifecycle_holdout_preflight.py  manage_retrieval.py  migrate_retrieval.py  (+23 more)
(+371 files in other folders)
