[project]
name = "arkts-code-reviewer"
version = "0.1.0"
description = "ArkTS code review assistant with code analysis and retrieval modules."
requires-python = ">=3.12,<3.13"
dependencies = [
    "markdown-it-py>=3,<4",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "ruamel.yaml>=0.18,<0.19",
]

[project.optional-dependencies]
parser = [
    "tree-sitter>=0.22,<0.23",
    "tree-sitter-typescript>=0.21,<0.22",
]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arkts_code_reviewer"]

[tool.hatch.build.targets.wheel.force-include]
"config/tags.yaml" = "arkts_code_reviewer/feature_routing/defaults/tags.yaml"
"config/dimensions.yaml" = "arkts_code_reviewer/feature_routing/defaults/dimensions.yaml"
"config/knowledge_seed_v1.yaml" = "arkts_code_reviewer/knowledge/defaults/knowledge_seed_v1.yaml"
"config/knowledge_annotations.yaml" = "arkts_code_reviewer/knowledge/defaults/knowledge_annotations.yaml"
"config/knowledge_model_export.yaml" = "arkts_code_reviewer/knowledge/defaults/knowledge_model_export.yaml"
"prompts/knowledge/grok-knowledge-auditor-v2.md" = "arkts_code_reviewer/knowledge/defaults/grok-knowledge-auditor-v2.md"
"sidecars/knowledge-api-parser/package-lock.json" = "arkts_code_reviewer/knowledge/sidecars/api_parser/package-lock.json"
"sidecars/knowledge-api-parser/package.json" = "arkts_code_reviewer/knowledge/sidecars/api_parser/package.json"
"sidecars/knowledge-api-parser/parse_api.js" = "arkts_code_reviewer/knowledge/sidecars/api_parser/parse_api.js"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
